# EroskiChatbot03

./: .env copy  .gitignore  Mejoras.txt  README.md  graph.py  incidents_database.json  langgraph.json  main.py  migración.py  pyproject.toml  requirements.txt  temp.py
.chainlit/: config.toml
config/: __init__.py  eroski_incidents.json  incident_config.py  logging_config.py  settings.py
interfaces/: __init__.py  chainlit.py  chainlit_app.backuppy  chainlit_app.py  eroski_chat_interface.py
models/: __init__.py  conversation.py  conversation_step.py  eroski_state.py  incidencia.py  state.py  user.py
nodes/: __init__.py  authenticate.py  authenticate.py.backup  authenticate_employee_node.py  authenticate_enhanced.py  authenticate_enhanced.py.backup  authenticate_llm_driven.py  base_node.py  classify.py  classify.py.backup  classify_enhanced.py  classify_llm_driven.py  collect_incident.py  escalar_supervisor.py  escalate.py  finalizar_ticket.py  finalize.py  identificar_usuario.py  interrupcion_procesar_incidencia.py  nodes_utils.py  procesar_incidencia.py  recopilar_input_usuario.py  search_knowledge.py  search_solution.py  verify.py
scripts/: diagnose_db.py  eroski_incidents.json  eroski_maestro_tiendas.json  quick_db_check.py  seed_eroski_employees.py  setup_db.py
test/: test_interrupciones_centralizadas.py  test_state_updates.py
tests/: debug_specific_user.py  find_env_files.py  fix_simple_prompt_error.py  force_env_override.py  simple_db_test.py  test_classify_node.py  test_eroski_workflow.py  test_json_loading.py  test_llm_authenticate_integration.py  (+1 more)
(+47 files in other folders)
