[project]
name = "eroskiattcliente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "azureopenai>=0.0.1",
    "chainlit>=2.5.5",
    "chromadb>=1.0.13",
    "colorlog>=6.9.0",
    "email-validator>=2.2.0",
    "graphviz>=0.21",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "langgraph-swarm>=0.0.11",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.0",
    "openai>=1.88.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.1",
    "typing>=3.10.0.0",
    "typing-extensions>=4.14.0",
]
